# iae

./: .gitignore  README.md  buildfile  find_sources.sh  meson.build
include/: grammar.h  parser.h  parsing_error.h  utility.h
include/implementation/: parser.cxx  parsing_error.cxx  utility.cxx
src/: diceparser2.cpp  grammar.cpp  iae.cpp  parser.cpp  parsing_error.cpp  rolling_dice.cpp  utility.cpp
tests/: unit_test.cpp  unit_test.h
